Chapter 13 — Listing 13.7: EnhancedMapAPIs.java Demonstrates: computeIfAbsent, computeIfPresent, merge, and getOrDefault